--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,7 +1,7 @@
 .cover {
   max-width: 1184px;
   min-height: 740px;
-  background-image: url(../../../sprint-3-images/cover-trains.jpg);
+  background-image: url(../../sprint-3-images/cover-trains.jpg);
   display: flex;
   justify-content: center;
   align-items: center;
