--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,6 +1,6 @@
 .places {
   max-width: 984px;
-  padding: 92px 0 0;
+  padding: 92px 0;
   display: grid;
   grid-template-columns: 1fr;
   row-gap: 80px;
@@ -16,7 +16,7 @@
   .places {
     max-width: 720px;
     row-gap: 73px;
-    padding: 88px 0 0;
+    padding: 88px 0 90px;
   }
 }
 
@@ -24,6 +24,6 @@
   .places {
     max-width: 320px;
     row-gap: 50px;
-    padding: 64px 0 0;
+    padding: 64px 0 66px;
   }
 }
