--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   padding: 64px 0 24px;
   background-color: #2A2C2F;
 }
@@ -26,7 +26,6 @@
   max-width: 186px;
   flex-direction: column;
   justify-content: space-between;
-  align-items: center;
   margin-left: 16px;
   }
 }
