--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,7 +1,7 @@
 .intro__title {
   max-width: 690px;
   min-height: 58px;
-  font-family: 'Inter', Arial, sans-serif;
+  font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 900;
   font-size: 54px;
@@ -11,7 +11,7 @@
 
 @media screen and (max-width: 1023px) {
   .intro__title {
-    font-size: 18px;
+    max-width: 720px;
   }
 }
 
