--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,7 +1,7 @@
 .lead__caption {
   min-width: 158px;
   min-height: 14px;
-  font-family: 'Inter', Arial, sans-serif;
+  font-family: 'Inter', 'Arial', sans-serif;
   font-weight: 400;
   font-size: 10px;
   line-height: 1.5;
