--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,6 +1,6 @@
 .page {
-  font-family: 'Inter', Arial, sans-serif;
-  font-style: normal;
+  /*font-family: 'Inter', 'Arial', sans-serif;;
+  font-style: normal;*/
   max-width: 1280px;
   min-height: 6875px;
   color: #FFFFFF;
