--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -5,7 +5,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: flex-start;
-  padding: 64px 0 24px;
+  margin: 92px auto 24px;
   background-color: #2A2C2F;
 }
 
@@ -18,14 +18,16 @@
 @media screen and (max-width: 1023px) {
   .footer {
   max-width: 720px;
+  margin: 88px auto 24px;
   }
 }
 
 @media screen and (max-width: 767px) {
   .footer {
   max-width: 186px;
+  min-height: 310px;
   flex-direction: column;
   justify-content: space-between;
-  margin-left: 16px;
+  margin: 64px 0 16px 24px;
   }
 }
