--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,9 +1,11 @@
 .header__lang-link {
-  font-family: 'Inter', 'Arial', sans-serif;
+  margin: 0;
+  padding: 0;
   font-weight: 400;
   font-size: 24px;
   line-height: 1.2;
   color: white;
+  text-decoration: none;
   transition: opacity 0.1s ease-out;
 }
 
