--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,6 +1,12 @@
 .page {
-  /*font-family: 'Inter', 'Arial', sans-serif;;
-  font-style: normal;*/
+  font-family: 'Inter', 'Arial', sans-serif;
+  font-style: normal;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  text-rendering: optimizeLegibility;
   max-width: 1280px;
   min-height: 6875px;
   color: #FFFFFF;
