--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,26 +1,27 @@
 .photo-grid__item {
   margin: 0;
   max-width: 284px;
-  max-height: 213px;  
+  max-height: 213px;
+  display: block;
 }
 
 @media screen and (max-width: 1279px) {
   .photo-grid__item {
     max-width: 300px;
-    max-height: 225px;  
+    max-height: 225px;
   }
 }
 
 @media screen and (max-width: 1023px) {
   .photo-grid__item {
     max-width: 352px;
-    max-height: 264px;  
+    max-height: 264px;
   }
 }
 
 @media screen and (max-width: 767px) {
   .photo-grid__item {
     max-width: 288px;
-    max-height: 216px;  
+    max-height: 216px;
   }
 }
